# Path-tracer

./: README.md
cpu/: CMakeLists.txt
cpu/src/: cs488.h  main.cpp
gpu/: CMakeLists.txt
gpu/src/: cs488.h  gif.h  glsl.h  linalg.h  main.cu
src/: cs488.h
